--- a/index.css
+++ b/index.css
@@ -1,15 +1,13 @@
-body {
-    text-align: center;
-    margin: 0px;
-    font-family: "Comic Sans MS";
+function multiplyBy()
+{
+        num1 = document.getElementById("firstNumber").value;
+        num2 = document.getElementById("secondNumber").value;
+        document.getElementById("result").innerHTML = num1 * num2;
 }
 
-.about {
-    background-color: blue;
-    padding: 0px;
-}
-
-.projects {
-    background-color: blue;
-    padding: 10px;
+function divideBy() 
+{ 
+        num1 = document.getElementById("firstNumber").value;
+        num2 = document.getElementById("secondNumber").value;
+document.getElementById("result").innerHTML = num1 / num2;
 }
